Bug 506481.  Make sure that we'll scroll to the selected option even if it's added after our initial reflow but before we finish adding initial option kids.  r=mats